Fix HTML structure and update contact email

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p><strong>Name:</strong> Ashraf Siddique Shakib</p>
         <p><strong>Role:</strong> Beginner Web Developer</p>
         <p><strong>Skills:</strong> HTML, CSS, JavaScript, Java</p>
-        <p><strong>Email:</strong> Eknjanalagbenah@gmail.com</p>
+        <p><strong>Email:</strong> poredibo@gmail.com</p>
       <a 
   href="https://wa.me/8801867473063" 
   target="_blank"
@@ -136,3 +136,4 @@
         document.getElementById("hireModal").style.display = "none";
     }
 </script>
+
